compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__unknown_variable_suggest_modules_from_the_same_package_with_internal_record_constructor.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\n// Internal record constructor with correct arity from another module in the\n// same package should be suggested.\n\nimport module\npub fn main() {\n    MyRecord(1, 2)\n}"
---
----- SOURCE CODE
-- module.gleam

@internal
pub type MyType {
    MyRecord(x: Int, y: Int)
}

-- main.gleam

// Internal record constructor with correct arity from another module in the
// same package should be suggested.

import module
pub fn main() {
    MyRecord(1, 2)
}

----- ERROR
error: Unknown variable
  ┌─ /src/one/two.gleam:7:5
  │
7 │     MyRecord(1, 2)
  │     ^^^^^^^^

The custom type variant constructor `MyRecord` is not in scope here.
Did you mean one of these:

  - module.MyRecord
